Autoscaling/nginx-INGRESS/home-dep-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-home
    template:
      metadata:
        labels:
          app: nginx-home
        spec:
          containers:
          - name: nginx
            image: nginx:latest
            ports:
            - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-svs-home
spec:
  selector:
    app: nginx-home
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
