Autoscaling/nginx-INGRESS/laptop-dep-svc.yml
qpiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-laptop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-laptop
    template:
      metadata:
        labels:
          app: tomcat-laptop
        spec:
          containers:
          - name: tomcat
            image: tomcat:latest
            ports:
            - containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-svc-laptop
spec:
  selector:
    app: tomcat-laptop
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
