Autoscaling/nginx-INGRESS/mobile-dep-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-mobile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-mobile
  template:
    metadata:
      labels:
        app: httpd-mobile
      spec:
        containers:
        - name: httpd
          image: httpd:latest
          ports:
          - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-svs-mobile
spec:
  selector:
    app: httpd-mobile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
